# indexed-allocator

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TUTORIAL.md
bench/: bench.cpp
include/indexed/: Allocator.h  ArrayArena.h  ArrayArenaMT.h  BufAlloc.h  Config.h  MmapAlloc.h  NewAlloc.h  Pointer.h  SingleArenaConfig.h  SingleArenaConfigUniversal.h  StackTop.h
tests/: CMakeLists.txt  CMakeLists.txt.in  intrusive_test.cpp  list_test.cpp  map_test.cpp  pointer_test.cpp  unordered_test.cpp
